<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_bookmarked"
            android:icon="@drawable/ic_bookmark_white_24dp"

            android:title="@string/nav_bookmark" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_drafts"


            android:title="@string/nav_drafts" />

        <item
            android:id="@+id/nav_published"
            android:icon="@drawable/ic_publish"

            android:title="@string/nav_published" />

        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_send"

            android:title="@string/nav_sent" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>