<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:appcompat="http://schemas.android.com/tools">
    <item
        android:id="@+id/searchid"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"

        />


    <item
        android:id="@+id/write_blog"
        android:title="@string/write_blog"

        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_action_border_color" />


    <item
        android:id="@+id/upload_audio"
        android:title="upload_audio"

        app:showAsAction="never"
        />
    <item
        android:id="@+id/upload_photos"
        android:title="upload_photo"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/contact_us"
        android:title="Contact Us"
        app:showAsAction="never"/>




    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/sign_out"

        app:showAsAction="never" />
</menu>