<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_v"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:id="@+id/linearlout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/post_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:hint="@string/post_title_hint"
            android:imeOptions="actionDone"
            android:inputType="text|textCapSentences"
            android:textAppearance="@style/TextAppearance.Large.Light"
            tools:text="My awesome post title"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_blue_dark" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/post_content"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:background="@android:color/transparent"


                android:focusable="true"
                android:gravity="top"
                android:hint="@string/post_body_hint"


                android:inputType="textMultiLine|textLongMessage|textCapSentences"


                android:minLines="6"


                android:padding="16dp"

                android:textAppearance="@style/TextAppearance.Light"
                android:textColorHint="@color/text_secondary"


                android:textIsSelectable="true" />

        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pbar"
            android:visibility="gone" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:visibility="visible"
            android:fitsSystemWindows="true">

            <ImageButton
                android:id="@+id/photoPickerButton"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/choose_article_image"

                android:background="@android:drawable/ic_menu_gallery" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/bold"
                android:layout_alignParentBottom="true"
                android:textSize="24sp"
                android:id="@+id/bold_button"
                android:layout_toRightOf="@id/photoPickerButton" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="italic"
                android:textSize="24sp"
                android:text="@string/italic"
                android:id="@+id/italic_button"
                android:layout_alignParentBottom="true"


                android:layout_toRightOf="@id/bold_button" />

            <ImageButton
                android:id="@+id/add_bullet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/italic_button"
                android:background="@drawable/ic_format_list_bulleted_black_24dp"
                android:layout_toRightOf="@id/italic_button" />

            <Button
                android:id="@+id/writer_detail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/add_bullet"
                android:text="@string/writer_detail"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"

                android:spinnerMode="dropdown"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/writer_detail"
                android:visibility="invisible" />


        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>

