<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Story Title: "/>
            <EditText
                android:id="@+id/post_title_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:hint="@string/post_title_hint"

                android:inputType="text|textCapSentences"
                android:textAppearance="@style/TextAppearance.Large.Light"
                tools:text="My awesome post title"

                />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Story Writer: "/>





            <EditText

                android:id="@+id/post_storywriter"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:inputType="text|textCapSentences"



                android:focusable="true"

                android:hint="@string/post_storyauthor"


                android:textAppearance="@style/TextAppearance.Light"
                android:textColorHint="@color/text_secondary"


                android:textIsSelectable="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="StoryTeller :"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"



            android:textAppearance="@style/TextAppearance.Light"
            android:textColorHint="@color/text_secondary"
            android:hint="@string/story_teller_hinter"
            android:id="@+id/storyteller"


            android:focusable="true"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Story"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textLongMessage|textCapSentences"
            android:id="@+id/abt_story"
            android:hint="@string/about_story"/>
    </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:visibility="visible"
            android:fitsSystemWindows="true">

            <ImageButton
                android:id="@+id/photoPickerButton1"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/choose_article_image"

                android:background="@android:drawable/ic_menu_gallery" />



            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/audio1"
                android:background="@drawable/fileupload"/>




        </LinearLayout>


    </LinearLayout>





