<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_layout_app_bar_height"
        android:fitsSystemWindows="true"
        app:elevation="@dimen/app_bar_elevation"
        android:id="@+id/app_bar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collaptool_layout"
            app:contentScrim="?attr/colorPrimary"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleTextAppearance="@style/CollapsedAppBarTopic"
            app:expandedTitleMargin="@dimen/activity_horizontal_margin"

            android:fitsSystemWindows="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/display_image"
                    android:contentDescription="@string/article_image"
                    app:layout_collapseMode="parallax"
                    android:fitsSystemWindows="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/photo_container"
                    android:background="@drawable/photo_background_protection" />

                <LinearLayout
                    android:id="@+id/meta_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#333"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:fitsSystemWindows="true">


                    <TextView
                        android:id="@+id/post_title"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#fff"
                        android:textStyle="bold"

                        android:maxLines="2" />
                </LinearLayout>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

                app:layout_collapseMode="pin"
                app:layout_scrollFlags="enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/home_but"
                        android:layout_gravity="left"
                        android:background="@drawable/ic_home_white_24dp"
                        android:contentDescription="@string/go_home" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="edit"
                        android:id="@+id/edit_admin"
                        android:visibility="gone"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:id="@+id/bookmark"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_bookmark_border_white_24dp"
                        android:contentDescription="@string/bookmark_button" />

                    <ImageButton
                        android:id="@+id/share"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:background="@drawable/ic_share"
                        android:contentDescription="@string/share_button" />

                </LinearLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/display_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="@dimen/profile_width"
                    android:layout_height="@dimen/profile_height"
                    android:layout_alignParentLeft="true"
                    android:contentDescription="@string/writer_profile"

                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <TextView
                    android:id="@+id/num_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"

                    android:textColor="@android:color/black"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/published_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_below="@id/num_likes"

                    android:textColor="@android:color/black"
                    android:visibility="visible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:focusable="true"


                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/user_status"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status" />


            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_con"
                android:autoLink="web"
                android:linksClickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/com_facebook_blue"

                android:text="@string/comments" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/list_comment"></android.support.v7.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:id="@+id/w_comment"


                    android:hint="@string/hint_write_comment" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:enabled="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@id/w_comment"
                    android:id="@+id/send_comment" />
            </RelativeLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="@dimen/fab_elevation"
        android:id="@+id/share_fab"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:fabSize="normal"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/like_button"

        android:src="@drawable/ic_favorite_border"

        app:layout_anchorGravity="bottom|end"
        app:layout_anchor="@id/app_bar"

        />
</android.support.design.widget.CoordinatorLayout>